svc instrument